2019-04-17  Dirk Eddelbuettel  <edd@debian.org>

	* R/isConnected.R (.isConnected): New helper function (to check network
	access) borrowed from our dang package

	* R/utils.R: More explicit copyright header
	* R/utilsKnitr.R: Idem

2019-04-14  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/tintHtmlIntro.Rmd: New shorter vignette

	* cleanup: Added

2019-04-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* vignettes/tintPdfIntro.Rmd: New shorter vignette

	* inst/examples/tintPDF.Rmd: Moved from vignettes/
	* inst/examples/tintHTML.Rmd: Idem

	* tests/simple.R: Pause local pdf test

2019-04-09  Dirk Eddelbuettel  <edd@debian.org>

	* inst/rmarkdown/templates/tintPdf/resources/tintPdf-template.tex:
	Rounded parenthesis as default citation style (as we do in tintBook)

2019-03-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.1

	* inst/examples/tintPDFGaramond.Rmd: Added example
	* inst/examples/tintPDFGaramond.pdf: Idem
	* inst/examples/tintPDFLato.Rmd: Idem
	* inst/examples/tintPDFLato.pdf: Idem

2019-03-29  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add dependency badge

2018-11-24  Jonathan Gilligan  <jonathan.gilligan@gmail.com>

	* R/html.R: Fixed obsolete URL
	* inst/examples/simpleHtml.Rmd: Idem
	* inst/examples/simplePdf.Rmd: Idem
	* inst/rmarkdown/templates/tintBook/skeleton/skeleton.Rmd: Idem
	* inst/rmarkdown/templates/tintHtml/skeleton/skeleton.Rmd: Idem
	* inst/rmarkdown/templates/tintPdf/skeleton/skeleton.Rmd: Idem
	* man/tintHtml.Rd: Idem
	* vignettes/tintHtml.Rmd: Idem
	* vignettes/tintPdf.Rmd: Item

2018-11-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Addded new co-author, rolled version and date

	* README.md: Added two more screenshots with font choices

	* inst/NEWS.Rd: Updated

2018-11-21  Jonathan Gilligan  <jonathan.gilligan@gmail.com>

	* R/pdf.R: Allow user-specified LaTeX templates in YAML; corrected